kubernetes/apps/security/kyverno/policies/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: check-runasnonroot
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Running as root is not allowed. The field spec.securityContext.runAsNonRoot must be true."
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
